[tool.poetry]
name = "usefultoolbox"
version = "0.1.0"
description = ""
authors = ["Charlélie Morineau"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
tox = "^4.18.0"
pytest = "^8.3.2"
flake8 = "^7.1.1"
pylint = "^3.2.6"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
exclude = [ 
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".tox"
]
ignore = [ 
    "E203",
    "E266",
    "E501",
    "W503",
    "F401"
]
